# multi-core-matrix-multiplication

./: CMakeLists.txt  README.md  build.sh  main_openmp.cpp  main_sequential.cpp  matrix-multiplication.cpp  mm.cpp  mm.h  mm_mpi.cpp  mm_mpi.h  mm_omp.cpp  mm_omp.h  mm_seq.cpp  mm_seq.h  mpi_mm.cpp  mpi_mm.h  omp_mm.cpp  omp_mm.h  run.sh  test-matrix  test-matrix.cpp
diagrams/: block_size.data  diagrams.ipynb  run.out
old/: main_cannon.cpp  main_mpi.cpp
